--- a/login.html
+++ b/login.html
@@ -73,7 +73,7 @@
 
 <script>
   // Points to your other HTML file. It uses a file URI to access your Desktop file.
-  const redirectTo = 'file:///C:/Users/jason/Desktop/sbi/sbi_visa_console_refresh_generate_pdf.html';
+const redirectTo 'sbi_visa_console_refresh_generate_pdf.html';
 
   document.getElementById('loginForm').addEventListener('submit', function(event) {
     event.preventDefault();
